# containers

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: build_check.yml  ci.yml  release_image.yml
