[tool.poetry]
description = "The repo for ML project's base images"
authors = ["Aisuko <urakiny@gmail.com>"]
license = "Apeche 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.2.2"
transformers = "4.39.2"
accelerate = "0.25.0"
kimchima = "0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
