[tool.poetry]
description = "The repo for ML project's base images"
authors = ["Aisuko <urakiny@gmail.com>"]
license = "Apeche 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
kimchima = "0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
